# go-analyzer

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  plan-go-analyzer-v4.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-07-mcp-server.md
docs/superpowers/specs/: 2026-04-07-mcp-server-design.md
go-analyzer/: Cargo.toml  README.md
go-analyzer-mcp/: Cargo.toml
go-analyzer-mcp/src/: lib.rs  main.rs  output.rs  selection_builder.rs  server.rs  state.rs
go-analyzer-mcp/src/tools/: call_graph.rs  describe.rs  edit.rs  mod.rs  query.rs
go-analyzer-mcp/tests/: mcp_integration_test.rs  smoke_test.rs
go-analyzer-mcp/tests/snapshots/: mcp_integration_test__describe_file_store.snap  mcp_integration_test__describe_module_package_count.snap  mcp_integration_test__edit_dry_run_rename.snap  mcp_integration_test__query_exported_structs_store.snap  mcp_integration_test__query_interfaces_store.snap
go-analyzer/examples/: add_string_methods.rs  combine_changes.rs  dead_code_elimination.rs  delete_methods.rs  query_repo.rs  walk_and_print.rs
go-analyzer/src/: applied.rs  callgraph.rs  changes.rs  edit.rs  lib.rs  printer.rs  repo.rs  resolver.rs  selection.rs  walker.rs
go-analyzer/src/walker/: tests.rs
go-analyzer/tests/: corpus_test.rs  fluent_api_test.rs  formatting_test.rs  interface_test.rs  printer_roundtrip.rs  regression_test.rs  rewrite_e2e_test.rs
go-analyzer/tests/fixture_repo/alpha/: interfaces.go  models.go
go-analyzer/tests/fixture_repo/beta/: service.go
go-analyzer/tests/fixtures/: channels.go  expressions.go  functions.go  imports.go  methods.go  statements.go  types.go
go-model/: Cargo.toml  README.md
go-model/src/: build.rs  decl.rs  expr.rs  leaf.rs  lib.rs  span.rs  stmt.rs  tests.rs  types.rs
