[package]
name = "go-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
go-model = { path = "../go-model" }
treesitter-types-go = "0.1.2"
tree-sitter = "0.26"
tree-sitter-go = "0.25"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
similar = "2"

[dev-dependencies]
tempfile = "3"
