[package]
name = "go-analyzer"
version = "0.1.0"
edition = "2024"
description = "Analyze and transform Go source code from Rust with a fluent, type-safe API"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["go", "golang", "analyzer", "refactoring", "code-generation"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
go-model = { path = "../go-model" }
treesitter-types-go = "0.2.0"
tree-sitter = "0.26"
tree-sitter-go = "0.25"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
similar = "2"
stacker = "0.1"

[dev-dependencies]
tempfile = "3"
